<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>printer3d_keyence_profile_capture</name>
  <version>0.0.0</version>
  <description>ROS2 package to control a Keyence LJ-X8080. Will work with all the LJ-X sensors of Keyence.</description>
  <maintainer email="mosserl@unistra.fr">Mosser Loic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
